prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/invalid_token.nut
// EXPECT_ERROR: "invalid token"
..
